Fixed spacing between divs on mobile devices

--- a/CSS/photo-gallery.css
+++ b/CSS/photo-gallery.css
@@ -28,6 +28,21 @@
 
 }
 
+.text-background{
+  background-color: rgba(255, 255, 255, 0.849);
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: 1px;
+  position: relative;
+  max-height: 800px;
+  opacity: 1;
+  transform: translate(0, 0);
+  z-index: 2;
+  margin-top: 60px;
+  padding: 25px;
+  margin-left: 2vw;
+}
+
 
 
 
@@ -38,3 +53,4 @@
       font-size: 6rem;
     }
   }
+
