--- a/CSS/photo-strip-cards.css
+++ b/CSS/photo-strip-cards.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   /*Removing touch highlights on smartphones*/
 
@@ -131,6 +132,17 @@ body {
 
 @media only screen and (min-width: 320px) {
   /* 320px */
+
+  #gallery-4x6{
+    padding: 0;
+  }
+  #gallery-2x6{
+    padding: 0;
+  }
+  .text-background-4x6{
+    margin-top: 0;
+    padding-top: 0;
+  }
 
   .sl-wrapper{
     overflow: visible;
@@ -483,6 +495,13 @@ body {
 /**********************************    Desktop    ***************************************/
 
 @media only screen and (min-width: 1024px) {
+
+  #gallery-4x6{
+    padding: 25px;
+  }
+  #gallery-2x6{
+    padding: 25px;
+  }
   /* 1024 */
   .swiper-4x6{
     margin-left: 0;
